# qp-platemapper

./: .gitignore  README.md  filehandler.py  main.py  ordiantionspacer.py  ordinationbuild.py  pyproject.toml  qiimebuild.py  test.ipynb  test.py
.github/workflows/: github_tests.yml
platemapper/: filehandler.py  main.py  ordinationbuild.py  qiimebuild.py  test.py  test_platemapper.py
platemapper/tests/: test_platemapper.py  test_regression.py
platemapper/tests/data/JansenVanVuuren_Heroic/: info.txt  meta_plate.tsv  meta_plate_origin.tsv  ordination_JansenVanVuuren_Heroic.txt
platemapper/tests/data/Kurth_JIA/: info.txt  meta_plate.tsv  meta_plate_origin.tsv  ordination_Kurth_JIA.txt
platemapper/tests/data/Moeller_SANS1/: info.txt  meta_plate.tsv  meta_plate_origin.tsv  ordination_Moeller_SANS1.txt
platemapper/tests/data/Pandyra_LCMV/: info.txt  meta_plate.tsv  meta_plate_origin.tsv  ordination_Pandyra_LCMV.txt
platemapper/tests/data/Rodrigo_Myocard/: info.txt  meta_plate.tsv  meta_plate_origin.tsv  ordination_Rodrigo_Myocard.txt
platemapper/tests/data/Sander_Tumorgenese/: info.txt  meta_plate.tsv  meta_plate_origin.tsv  ordination_Sander_Tumorgenese.txt
platemapper/tests/data/Werth_Duftzellen/: info.txt  meta_plate.tsv  ordination_Werth_Duftzellen.txt
