[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "platemapper"
version = "0.0.1"
authors = [
  { name="Sven Dlugosch", email="sven.david.dlugosch@bio.uni-giessen.de" },
]
description = "A plate mapping converter to abuse Emperor for ..."
#readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/jlab/qp-platemapper"
Issues = "https://github.com/jlab/qp-platemapper/issues"
